# web_agent

./: .env.example  .gitignore  LICENSE  README.md  run_demo.ps1  run_demo.sh
artifacts/: Comparison Task.html
code/: .gitignore  agent_config.yaml  comparison_report.py  flow.py  gateway.py  mcp_runner.py  persistence.py  pyproject.toml  recovery.py  replay.py  schemas.py  skills.py
code/browser/: client.py  skill.py
code/prompts/: PROMPT_SCORES.md  browser.md  coder.md  comparator.md  critic.md  distiller.md  formatter.md  planner.md  researcher.md  retriever.md  sandbox_executor.md  summariser.md
code/tests/: test_comparison.py  test_persistence.py  test_recovery.py
code/ui/: __init__.py  queries.json  server.py
code/ui/static/: index.html
llm_gatewayV9/: .gitignore  agent_routing.yaml  client.py  main.py
llm_gatewayV9/scripts/: benchmark_nvidia_models.py  benchmark_nvidia_results.json
llm_gatewayV9/tests/: test_agent_routing.py
