[project]
name = "webagent"
version = "0.1.0"
description = "Web Agent: growing-graph runtime with Browser skill (extract/a11y/vision cascade)."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "mcp[cli]",
    "httpx",
    "ddgs",
    "tavily-python",
    "crawl4ai",
    "python-dotenv",
    "pydantic>=2.13.4",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26",
    "networkx>=3.2",
    "pyyaml>=6.0",
    # Browser skill dependencies.
    "playwright>=1.47",
    "pillow>=10.0",
    "trafilatura>=1.12",
    "lxml>=5.2",
    "lxml-html-clean>=0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "network: test requires internet access",
    "embed: test requires the embedding endpoint (gateway V8)",
]
